libclang-bootstrap/imports.h

unsigned                clang_isExpression (enum CXCursorKind CK);
unsigned                clang_isStatement (enum CXCursorKind CK);
unsigned                clang_isAttribute (enum CXCursorKind CK);
unsigned                clang_isInvalid (enum CXCursorKind CK);
unsigned                clang_isTranslationUnit (enum CXCursorKind CK);
unsigned                clang_isPreprocessing (enum CXCursorKind CK);
unsigned                clang_isUnexposed (enum CXCursorKind CK);