libclang-bindings/src/Clang/LowLevel/FFI.hs


foreign import capi unsafe "clang_wrappers.h clang_isExpression"
  nowrapper_isExpression :: SimpleEnum CXCursorKind -> IO CUInt

foreign import capi unsafe "clang_wrappers.h clang_isStatement"
  nowrapper_isStatement :: SimpleEnum CXCursorKind -> IO CUInt

foreign import capi unsafe "clang_wrappers.h clang_isAttribute"
  nowrapper_isAttribute :: SimpleEnum CXCursorKind -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_hasAttrs :: R CXCursor_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h clang_isInvalid"
  nowrapper_isInvalid :: SimpleEnum CXCursorKind -> IO CUInt

foreign import capi unsafe "clang_wrappers.h clang_isTranslationUnit"
  nowrapper_isTranslationUnit :: SimpleEnum CXCursorKind -> IO CUInt

foreign import capi unsafe "clang_wrappers.h clang_isPreprocessing"
  nowrapper_isPreprocessing :: SimpleEnum CXCursorKind -> IO CUInt

foreign import capi unsafe "clang_wrappers.h clang_isUnexposed"
  nowrapper_isUnexposed :: SimpleEnum CXCursorKind -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorLinkage :: R CXCursor_ -> IO (SimpleEnum CXLinkageKind)

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorVisibility :: R CXCursor_ -> IO (SimpleEnum CXVisibilityKind)

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorAvailability :: R CXCursor_ -> IO (SimpleEnum CXAvailabilityKind)

-- OMITTED: int                     clang_getCursorPlatformAvailability (CXCursor cursor, int * always_deprecated, CXString * deprecated_message, int * always_unavailable, CXString * unavailable_message, CXPlatformAvailability * availability, int availability_size);

-- OMITTED: void                    clang_disposeCXPlatformAvailability (CXPlatformAvailability * availability);

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_getVarDeclInitializer :: R CXCursor_ -> W CXCursor_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_hasVarDeclGlobalStorage :: R CXCursor_ -> IO CInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_hasVarDeclExternalStorage :: R CXCursor_ -> IO CInt

-- OMITTED: enum CXLanguageKind     clang_getCursorLanguage (CXCursor cursor);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorTLSKind :: R CXCursor_ -> IO (SimpleEnum CXTLSKind)

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_getTranslationUnit :: R CXCursor_ -> IO CXTranslationUnit

-- OMITTED: CXCursorSet             clang_createCXCursorSet (void);

-- OMITTED: void                    clang_disposeCXCursorSet (CXCursorSet cset);

-- OMITTED: unsigned                clang_CXCursorSet_contains (CXCursorSet cset, CXCursor cursor);

-- OMITTED: unsigned                clang_CXCursorSet_insert (CXCursorSet cset, CXCursor cursor);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorSemanticParent :: R CXCursor_ -> W CXCursor_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorLexicalParent :: R CXCursor_ -> W CXCursor_ -> IO ()

-- OMITTED: void                    clang_getOverriddenCursors (CXCursor cursor, CXCursor * * overridden, unsigned * num_overridden);

-- OMITTED: void                    clang_disposeOverriddenCursors (CXCursor * overridden);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getIncludedFile :: R CXCursor_ -> IO CXFile

-- *** Mapping between cursors and source code  ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__CURSOR__SOURCE.html>

-- OMITTED: CXCursor         clang_getCursor (CXTranslationUnit TU, CXSourceLocation Source);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorLocation :: R CXCursor_ -> W CXSourceLocation_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorExtent :: R CXCursor_ -> W CXSourceRange_ -> IO ()

-- *** Type information for CXCursors ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__TYPES.html>

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorType :: R CXCursor_ -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getTypeSpelling :: R CXType_ -> W CXString_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getTypedefDeclUnderlyingType :: R CXCursor_ -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getEnumDeclIntegerType :: R CXCursor_ -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getEnumConstantDeclValue :: R CXCursor_ -> IO CLLong

foreign import capi unsafe "clang_wrappers.h"
  wrap_getEnumConstantDeclUnsignedValue :: R CXCursor_ -> IO CULLong

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_isBitField :: R CXCursor_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getFieldDeclBitWidth :: R CXCursor_ -> IO CInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_getNumArguments :: R CXCursor_ -> IO CInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_getArgument :: R CXCursor_ -> CUInt -> W CXCursor_ -> IO ()

-- OMITTED: int                         clang_Cursor_getNumTemplateArguments (CXCursor C);

-- OMITTED: enum CXTemplateArgumentKind clang_Cursor_getTemplateArgumentKind (CXCursor C, unsigned I);

-- OMITTED: CXType                      clang_Cursor_getTemplateArgumentType (CXCursor C, unsigned I);

-- OMITTED: long long                   clang_Cursor_getTemplateArgumentValue (CXCursor C, unsigned I);

-- OMITTED: unsigned long long          clang_Cursor_getTemplateArgumentUnsignedValue (CXCursor C, unsigned I);

foreign import capi unsafe "clang_wrappers.h"
  wrap_equalTypes :: R CXType_ -> R CXType_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCanonicalType :: R CXType_ -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_isConstQualifiedType :: R CXType_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_isMacroFunctionLike :: R CXCursor_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_isMacroBuiltin :: R CXCursor_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_isFunctionInlined :: R CXCursor_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_isVolatileQualifiedType :: R CXType_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_isRestrictQualifiedType :: R CXType_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getAddressSpace :: R CXType_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getTypedefName :: R CXType_ -> W CXString_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getPointeeType :: R CXType_ -> W CXType_ -> IO ()

-- OMITTED: CXType                      clang_getUnqualifiedType (CXType CT); // NOTE: does not exist before clang-16, so we define a custom wrapper in clang_wrappers.h

-- OMITTED: CXType                      clang_getNonReferenceType (CXType CT);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getTypeDeclaration :: R CXType_ -> W CXCursor_ -> IO ()

-- OMITTED: CXString                    clang_getDeclObjCTypeEncoding (CXCursor C);

-- OMITTED: CXString                    clang_Type_getObjCEncoding (CXType type);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getTypeKindSpelling :: SimpleEnum CXTypeKind -> W CXString_ -> IO ()

-- OMITTED: enum CXCallingConv          clang_getFunctionTypeCallingConv (CXType T);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getResultType :: R CXType_ -> W CXType_ -> IO ()

-- OMITTED: int                         clang_getExceptionSpecificationType (CXType T);

foreign import capi unsafe "clang_wrappers.h"
  wrap_getNumArgTypes :: R CXType_ -> IO CInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getArgType :: R CXType_ -> CUInt -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_Type_getObjCObjectBaseType :: R CXType_ -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_Type_getNumObjCProtocolRefs :: R CXType_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_Type_getObjCProtocolDecl :: R CXType_ -> CUInt -> W CXCursor_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_Type_getNumObjCTypeArgs :: R CXType_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_Type_getObjCTypeArg :: R CXType_ -> CUInt -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_isFunctionTypeVariadic :: R CXType_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorResultType :: R CXCursor_ -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getCursorExceptionSpecificationType :: R CXCursor_ -> IO CInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_isPODType :: R CXType_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_getElementType :: R CXType_ -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getNumElements :: R CXType_ -> IO CLLong

foreign import capi unsafe "clang_wrappers.h"
  wrap_getArrayElementType :: R CXType_ -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_getArraySize :: R CXType_ -> IO CLLong

foreign import capi unsafe "clang_wrappers.h"
  wrap_Type_getNamedType :: R CXType_ -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_Type_isTransparentTagTypedef :: R CXType_ -> IO CUInt

-- OMITTED: enum CXTypeNullabilityKind  clang_Type_getNullability (CXType T);

foreign import capi unsafe "clang_wrappers.h"
  wrap_Type_getAlignOf :: R CXType_ -> IO CLLong

-- OMITTED: CXType                      clang_Type_getClassType (CXType T);

foreign import capi unsafe "clang_wrappers.h"
  wrap_Type_getSizeOf :: R CXType_ -> IO CLLong

foreign import capi unsafe "clang_wrappers.h"
  wrap_Type_getOffsetOf :: R CXType_ -> ConstPtr CChar -> IO CLLong

foreign import capi unsafe "clang_wrappers.h"
  wrap_Type_getModifiedType :: R CXType_ -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_Type_getValueType :: R CXType_ -> W CXType_ -> IO ()

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_getOffsetOfField :: R CXCursor_ -> IO CLLong

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_isAnonymous :: R CXCursor_ -> IO CUInt

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_isAnonymousRecordDecl :: R CXCursor_ -> IO CUInt

-- OMITTED: unsigned                    clang_Cursor_isInlineNamespace (CXCursor C);

-- OMITTED: int                         clang_Type_getNumTemplateArguments (CXType T);

-- OMITTED: CXType                      clang_Type_getTemplateArgumentAsType (CXType T, unsigned i);

-- OMITTED: enum CXRefQualifierKind     clang_Type_getCXXRefQualifier (CXType T);

-- OMITTED: unsigned                    clang_isVirtualBase (CXCursor C);

-- OMITTED: long long                   clang_getOffsetOfBase (CXCursor Parent, CXCursor Base);

-- OMITTED: enum CX_CXXAccessSpecifier  clang_getCXXAccessSpecifier (CXCursor C);

-- OMITTED: enum CX_BinaryOperatorKind  clang_Cursor_getBinaryOpcode (CXCursor C);

-- OMITTED: CXString                    clang_Cursor_getBinaryOpcodeStr (enum CX_BinaryOperatorKind Op);

foreign import capi unsafe "clang_wrappers.h"
  wrap_Cursor_getStorageClass :: R CXCursor_ -> IO (SimpleEnum CX_StorageClass)

-- OMITTED: unsigned                    clang_getNumOverloadedDecls (CXCursor cursor);

-- OMITTED: CXCursor                    clang_getOverloadedDecl (CXCursor cursor, unsigned index);

-- *** Traversing the AST with cursors ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__CURSOR__TRAVERSAL.html>

-- OMITTED: unsigned clang_visitChildren (CXCursor parent, CXCursorVisitor visitor, CXClientData client_data);

-- OMITTED: unsigned clang_visitChildrenWithBlock (CXCursor parent, CXCursorVisitorBlock block);

-- *** Cross-referencing in the AST  ***

-- <https://clang.llvm.org/doxygen/group__CINDEX__CURSOR__XREF.html>

-- OMITTED: CXString         clang_getCursorUSR (CXCursor);
